Fix compiler flags for error prone from jvm.config to pom.xml (#480)